fixed css z-index issue

--- a/Client/gather-client/app/Chat/chat.css
+++ b/Client/gather-client/app/Chat/chat.css
@@ -20,7 +20,7 @@
     margin-left: 0;
     transition: 0.3s ease;
     position: relative;
-    z-index: 999;
+    z-index: 989;
 }
 
 .chat-page-title {
@@ -47,6 +47,7 @@
     color: white;
     font-size: 150%;
     cursor: pointer;
+    z-index: 999;
 }
 
 .chat-option-panel {
@@ -124,7 +125,6 @@
     display: flex;
     flex-direction: column;
     transition: 0.2s ease-in-out;
-    z-index: 1;
 }
 
 .chat-ai {
